@@ -1,3 +1,7 @@
+2007-06-29  Jens Granseuer  <jensgr@gmx.net>
+
+	* Makefile.am: fix target dir for icons
+
 2007-06-28  Jens Granseuer  <jensgr@gmx.net>
 
 	Patch by: Luca Feretti <elle.uca@libero.it>
